// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExchangeStatus > should show expired status 1`] = `
<div>
  <div
    class="flex overflow-hidden flex-col my-6 rounded-xl"
  >
    <div
      class="flex items-center py-2 px-4 space-x-2 text-sm font-semibold dark:text-white bg-theme-danger-100 text-theme-danger-700 dark:bg-theme-danger-500"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        >
          <svg
            id="circle-cross"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-width="2"
            >
              <circle
                cx="10"
                cy="10"
                r="9"
                stroke-miterlimit="10"
              />
              <path
                d="M7 13l6-6M13 13L7 7"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
          </svg>
        </div>
      </div>
      <span>
        Error
      </span>
    </div>
    <div
      class="p-4 w-full text-sm leading-relaxed text-left break-words bg-theme-danger-50 dark:bg-theme-secondary-800"
    >
      This transaction has expired.
    </div>
  </div>
</div>
`;

exports[`ExchangeStatus > should show failed status 1`] = `
<div>
  <div
    class="flex overflow-hidden flex-col my-6 rounded-xl"
  >
    <div
      class="flex items-center py-2 px-4 space-x-2 text-sm font-semibold dark:text-white bg-theme-danger-100 text-theme-danger-700 dark:bg-theme-danger-500"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        >
          <svg
            id="circle-cross"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-width="2"
            >
              <circle
                cx="10"
                cy="10"
                r="9"
                stroke-miterlimit="10"
              />
              <path
                d="M7 13l6-6M13 13L7 7"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
          </svg>
        </div>
      </div>
      <span>
        Error
      </span>
    </div>
    <div
      class="p-4 w-full text-sm leading-relaxed text-left break-words bg-theme-danger-50 dark:bg-theme-secondary-800"
    >
      This transaction has failed.
    </div>
  </div>
</div>
`;

exports[`ExchangeStatus > should show refunded status 1`] = `
<div>
  <div
    class="flex overflow-hidden flex-col my-6 rounded-xl"
  >
    <div
      class="flex items-center py-2 px-4 space-x-2 text-sm font-semibold dark:text-white bg-theme-warning-100 text-theme-warning-700 dark:bg-theme-warning-700"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        >
          <svg
            id="circle-exclamation-mark"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-width="2"
            >
              <circle
                cx="10"
                cy="10"
                r="9"
                stroke-miterlimit="10"
              />
              <path
                d="M10 10.5v-5"
                stroke-linecap="round"
                stroke-miterlimit="10"
              />
              <path
                d="M10 14h0"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
          </svg>
        </div>
      </div>
      <span>
        Warning
      </span>
    </div>
    <div
      class="p-4 w-full text-sm leading-relaxed text-left break-words bg-theme-warning-50 dark:bg-theme-secondary-800"
    >
      This transaction has been refunded.
    </div>
  </div>
</div>
`;

exports[`ExchangeStatus > should show verifying status 1`] = `
<div>
  <div
    class="flex overflow-hidden flex-col my-6 rounded-xl"
  >
    <div
      class="flex items-center py-2 px-4 space-x-2 text-sm font-semibold dark:text-white bg-theme-warning-100 text-theme-warning-700 dark:bg-theme-warning-700"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        >
          <svg
            id="circle-exclamation-mark"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-width="2"
            >
              <circle
                cx="10"
                cy="10"
                r="9"
                stroke-miterlimit="10"
              />
              <path
                d="M10 10.5v-5"
                stroke-linecap="round"
                stroke-miterlimit="10"
              />
              <path
                d="M10 14h0"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
          </svg>
        </div>
      </div>
      <span>
        Warning
      </span>
    </div>
    <div
      class="p-4 w-full text-sm leading-relaxed text-left break-words bg-theme-warning-50 dark:bg-theme-secondary-800"
    >
      This transaction is being verified by the provider.
    </div>
  </div>
</div>
`;
